--- a/components/index.templ
+++ b/components/index.templ
@@ -1,21 +1,27 @@
 package components
+import (
+    "HTMX_GO/models"
+)
 
-templ index(data) {
+templ Index(configurationsData []models.Configuration) {
     <html lang="en">
       <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.2" />
+        <script src="//unpkg.com/alpinejs" defer></script>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet" />
         <link href="/css/output.css" rel="stylesheet" />
         <title>Go + HTMX + Tailwind</title>
       </head>
       <body>
         <main>
-          <div>
-            <h1>Go + HTMX + Tailwind Example</h1>
+          <div class="min-h-screen bg-gray-50 text-gray-900">
+            <h1 class="title text-2xl font-bold text-purple-600 text-left">Go Templ + HTMX + Tailwind Example</h1>
             <br/>
-            <span>Configurations</span>
-            @table(data)
+            <h4 class="title text-4xl md:text-5xl lg:text-6xl text-purple-600 text-center my-8">My Configurations</h4>
+            @add_row()
+            @table(configurationsData)
           </div>
         </main>
       </body>
